--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ html, body {
   color: white;
 }
 
-.slide-text {
+#slide-text {
 max-width: 0;
 overflow: hidden;
 white-space: nowrap;
@@ -43,7 +43,7 @@ font-size: 12px;
 color: #ffffff;
 }
 
-.slide-text.show {
+#slide-text.show {
 max-width: 200px; /* wie weit er raus darf */
 opacity: 1;
 transform: translateX(0);
